[package]
name = "aoc17"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc17"
path = "src/lib.rs"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
bitmask-enum = "2"
itertools = "0.13"
log = "0.4"
memchr = "2.7"
pretty_assertions = "1"
rstest = "0.23"
ultraviolet = { version = "0.9", features = ["int"] }
