[package]
name = "aoc18"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
failure = "*"
itertools = "*"
lazy_static = "*"
regex = "1"
strsim = "*"

[dependencies.image]
version = "*"
features = ["png"]
