[package]
name = "aoc18"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
failure = "0.1"
itertools = "0.13"
lazy_static = "1"
regex = "1"
strsim = "0.11"

[dependencies.image]
version = "0.25"
features = ["png"]
