[package]
name = "aoc19"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"
default-run = "aoc19"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
smallvec = "1"
itertools = "0.8"
intcode = { path = "../intcode" }
