[package]
name = "aoc21"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2021"
default-run = "aoc21"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
itertools = "0.10"
lazy_static = "1"
regex = "1"
smallvec = "1"
rayon = "1"
