[package]
name = "aoc21"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2021"
default-run = "aoc21"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc21"
path = "src/lib.rs"

[[bin]]
name = "gif-of"
path = "src/gif_of.rs"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"

itertools = "0.13"
lazy_static = "1"
regex = "1"
smallvec = { version = "1", features = ["const_generics"] }
rayon = "1"
core_simd = { git = "https://github.com/rust-lang/portable-simd", optional = true }
image = { version = "0.25", features = ["gif"] }
rand = "0.8"
scan_fmt = "0.2"
pretty_assertions = "1"

# Enable aggressive optimizations for all dependencies all of the time
[profile.dev.package."*"]
opt-level = 2

[profile.release]
overflow-checks = true

[features]
default = []
simd = ["core_simd"]
