[package]
name = "aoc22"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2021"
default-run = "aoc22"

[[bin]]
name = "aoc22"
path = "src/main.rs"

[[bin]]
name = "heightmap"
path = "src/heightmap.rs"

[[bin]]
name = "render-day22"
path = "src/render-day22.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc22"
path = "src/lib.rs"

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"

clap = {version = "4", features =["derive"] }
core_simd = { git = "https://github.com/rust-lang/portable-simd", optional = true}
derive_more = "0.99"
either = "1.8"
image = { version = "0.24", default-features = false, features = ["png"] }
itertools = "0.12"
json = "0.12"
lazy_static = "1"
noise = "0.8"
num = "0.4"
pretty_assertions = "*"
rand = "0.8"
rayon = "1"
regex = "1"
rstest = { version= "0.18", default-features = false }
scan_fmt = "0.2"
smallstr = { version = "0.3", features = ["std"] }
smallvec = { version = "1", features = ["const_generics"] }
ultraviolet = { version = "0.9", features = ["int"] }

# Enable aggressive optimizations for all dependencies all of the time
[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true
overflow-checks = true
panic = "abort"

[features]
default = []
nightly = []
simd = ["core_simd", "nightly"]
broken = []
