[package]
name = "aoc23"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2021"
default-run = "aoc23"

[[bin]]
name = "aoc23"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc23"
path = "src/lib.rs"

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"

ctor = "0.2"
env_logger = "0.10"
log = { version = "0.4", features = ["serde"] }

pretty_assertions = "*"
rstest = { version= "0.18", default-features = false }

itertools = "0.12"
lazy_static = "1"
num = "0.4"
scan_fmt = "0.2"
smallvec = "1"
fnv = "1"
image = "0.24"
ultraviolet = { version = "0.9", features = ["int"] }
bitmask-enum = "2"
indicatif = "0.17"

# Enable aggressive optimizations for all dependencies all of the time
[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true
overflow-checks = true
panic = "abort"
