[package]
name = "aoc24"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2021"
default-run = "aoc24"
resolver = "2"

[[bin]]
name = "aoc24"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc24"
path = "src/lib.rs"

[[bin]]
name = "viz-day10"
path = "src/viz/viz-day10.rs"

[[bin]]
name = "viz-day20"
path = "src/viz/viz-day20.rs"

[features]
default = []
broken = []

[dev-dependencies]
pretty_assertions = "*"
rstest = { version = "0.23", default-features = false }
generic-tests = "0.1.3"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"

ctor = "0.2"
env_logger = "0.11"
log = { version = "0.4", features = ["serde", "kv"] }

bitmask-enum = "2"
image = "0.24"
indicatif = "0.17.9"
itertools = "0.13"
memchr = "2.7"
num = "0.4"
rayon = "1"
regex = "1"
scan_fmt = "0.2"
smallvec = "1"
ultraviolet = { version = "0.9", features = ["int"] }
clap = { version = "4", features = ["derive"] }

# Enable aggressive optimizations for all dependencies all of the time
[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true
overflow-checks = true
panic = "abort"
