[package]
name = "intcode"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vm-logging = []
# default = ["vm-logging"]
default = []

[lib]
name = "intcode"
path = "src/lib.rs"

[[bin]]
name = "ic-asm"
path = "src/asm.rs"

[[bin]]
name = "ic-dis"
path = "src/disasm.rs"

[[bin]]
name = "intcode"
path = "src/runner.rs"

[dependencies]
smallvec = "1"
err-derive = "0.2"
num = "0.2"

[dev-dependencies]
pretty_assertions = "*"
